<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:id="@+id/title1">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:src="@drawable/imu2"
            android:id="@+id/img"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/imu"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:id="@+id/partsmenu"
        android:background="@drawable/shadow"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/neck1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/neck"
                android:elevation="@dimen/cardview_default_radius"
                android:background="#C3C8C8"
                android:text="@string/neck"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
               />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shoulder1"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/neck1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shoulder"
                android:background="#C3C8C8"
                android:elevation="@dimen/cardview_default_radius"
                android:text="@string/shoulder"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"/>
        </RelativeLayout>

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/partsmenu"
        app:cardCornerRadius="10dp"
        android:id="@+id/videoView">
        <VideoView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/pic"
            android:id="@+id/video"/>
    </androidx.cardview.widget.CardView>


</RelativeLayout>